--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -10,8 +10,9 @@
     "alt": "^0.18.1",
     "base-64": "^0.1.0",
     "moment": "^2.14.1",
-    "react": "15.2.1",
-    "react-native": "0.31.0",
+    "moment-timezone": "^0.5.7",
+    "react": "15.3.2",
+    "react-native": "0.36.0",
     "react-native-action-button": "^1.1.11",
     "react-native-android-statusbar": "^0.1.2",
     "react-native-checkbox": "^1.0.15",
@@ -21,6 +22,7 @@
     "react-native-material-design": "^0.3.7",
     "react-native-push-notification": "^2.0.2",
     "react-native-tabs": "^1.0.9",
+    "react-native-unique-id": "^1.0.4",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
