--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -25,6 +25,7 @@
     "react-native-unique-id": "^1.0.4",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "redux-watch": "^1.1.1"
   }
 }
