Add new nav banner Various login modal improvement Added a refresh button Notification

--- a/Ludesco/android/app/build.gradle
+++ b/Ludesco/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.ludesco"
+        applicationId "ch.ludesco"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 2
