--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -6,26 +6,21 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "@remobile/react-native-splashscreen": "^1.0.3",
-    "alt": "^0.18.1",
-    "base-64": "^0.1.0",
-    "moment": "^2.14.1",
-    "moment-timezone": "^0.5.7",
-    "react": "15.3.2",
-    "react-native": "0.36.0",
-    "react-native-action-button": "^1.1.11",
-    "react-native-android-statusbar": "^0.1.2",
-    "react-native-checkbox": "^1.0.15",
-    "react-native-datepicker": "^1.3.2",
-    "react-native-fcm": "^1.0.16",
-    "react-native-htmlview": "^0.5.0",
-    "react-native-material-design": "^0.3.7",
-    "react-native-push-notification": "^2.0.2",
-    "react-native-tabs": "^1.0.9",
-    "react-native-unique-id": "^1.0.4",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
-    "redux-watch": "^1.1.1"
+    "base-64": "0.1.0",
+    "dateformat" : "2.0.0",
+    "moment": "2.17.1",
+    "moment-timezone": "0.5.11",
+    "react": "15.4.2",
+    "react-native": "0.40.0",
+    "react-native-action-button": "2.0.19",
+    "react-native-datepicker": "1.4.3",
+    "react-native-fcm": "4.0.1",
+    "react-native-htmlview": "0.5.0",
+    "react-native-material-design": "0.3.7",
+    "react-native-unique-id": "1.0.4",
+    "react-redux": "5.0.2",
+    "redux": "3.6.0",
+    "redux-thunk": "2.1.0",
+    "redux-watch": "1.1.1"
   }
 }
