--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -16,7 +16,7 @@
     "react-native-datepicker": "1.4.3",
     "react-native-fcm": "4.0.1",
     "react-native-htmlview": "0.5.0",
-    "react-native-material-design": "0.3.7",
+    "react-native-material-design": "https://github.com/arnaudgeiser/react-native-material-design",
     "react-native-unique-id": "1.0.4",
     "react-redux": "5.0.2",
     "redux": "3.6.0",
