--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -7,20 +7,26 @@
   },
   "dependencies": {
     "base-64": "0.1.0",
-    "dateformat" : "2.0.0",
-    "moment": "2.17.1",
-    "moment-timezone": "0.5.11",
-    "react": "15.4.2",
-    "react-native": "0.40.0",
-    "react-native-action-button": "2.0.19",
-    "react-native-datepicker": "1.4.3",
-    "react-native-fcm": "4.0.1",
-    "react-native-htmlview": "0.5.0",
-    "react-native-material-design": "https://github.com/arnaudgeiser/react-native-material-design",
+    "dateformat": "3.0.2",
+    "expo": "22.0.0",
+    "moment": "^2.19.1",
+    "moment-timezone": "0.5.14",
+    "react": "16.0.0",
+    "react-native": "^0.50.3",
+    "react-native-action-button": "2.8.1",
+    "react-native-calendars": "^1.9.2",
+    "react-native-datepicker": "1.6.0",
+    "react-native-fcm": "10.0.3",
+    "react-native-htmlview": "0.12.1",
+    "react-native-maps": "^0.17.1",
+    "react-native-material-ui": "^1.14.0",
     "react-native-unique-id": "1.0.4",
-    "react-redux": "5.0.2",
-    "redux": "3.6.0",
-    "redux-thunk": "2.1.0",
-    "redux-watch": "1.1.1"
+    "react-native-vector-icons": "^4.4.2",
+    "react-navigation": "^1.0.0-beta.21",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
+    "redux-watch": "1.1.1",
+    "watchman": "^0.1.8"
   }
 }
