--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "babel-plugin-transform-remove-console": "^6.8.5",
     "base-64": "0.1.0",
     "dateformat": "3.0.2",
     "expo": "22.0.0",
@@ -20,6 +21,7 @@
     "react-native-datepicker": "1.6.0",
     "react-native-fcm": "10.0.3",
     "react-native-htmlview": "0.12.1",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-maps": "^0.17.1",
     "react-native-material-ui": "^1.14.0",
     "react-native-unique-id": "1.0.4",
@@ -29,6 +31,7 @@
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "redux-watch": "1.1.1",
+    "reselect": "^3.0.1",
     "watchman": "^0.1.8"
   }
 }
