Added iOS modifications

--- a/Ludesco/android/app/build.gradle
+++ b/Ludesco/android/app/build.gradle
@@ -144,6 +144,8 @@ repositories {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-maps')
     compile project(':react-native-add-calendar-event')
     compile project(':react-native-fcm')
     compile fileTree(dir: "libs", include: ["*.jar"])
