--- a/Ludesco/ios/Podfile
+++ b/Ludesco/ios/Podfile
@@ -5,13 +5,13 @@ target 'Ludesco' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   use_frameworks!
 
-  pod 'Firebase/Messaging'
+  pod 'Firebase/Messaging', '4.0.0'
 
-  # Pods for Ludesco
-  pod 'react-native-add-calendar-event', :path => '../node_modules/react-native-add-calendar-event'
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'LudescoTests' do
-    inherit! :search_paths
     # Pods for testing
   end
 
