--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
+  "rnpm": {
+   "assets": ["./assets/fonts"]
+ },
   "dependencies": {
     "babel-plugin-transform-remove-console": "^6.8.5",
     "base-64": "0.1.0",
@@ -14,9 +17,9 @@
     "moment": "^2.19.1",
     "moment-timezone": "0.5.14",
     "react": "16.0.0",
-    "react-native": "^0.50.3",
+    "react-native": "0.50.4",
     "react-native-action-button": "2.8.1",
-    "react-native-add-calendar-event": "^0.3.0",
+    "react-native-add-calendar-event": "git+https://github.com/DiksonSamuel/react-native-add-calendar-event.git",
     "react-native-calendars": "^1.9.2",
     "react-native-datepicker": "1.6.0",
     "react-native-fcm": "10.0.3",
@@ -26,7 +29,8 @@
     "react-native-material-ui": "^1.14.0",
     "react-native-unique-id": "1.0.4",
     "react-native-vector-icons": "^4.4.2",
-    "react-navigation": "^1.0.0-beta.21",
+    "react-navigation": "1.0.3",
+    "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
