--- a/Ludesco/android/app/build.gradle
+++ b/Ludesco/android/app/build.gradle
@@ -141,17 +141,21 @@ android {
 repositories {
             jcenter()
             mavenCentral()
+	    maven { url "https://maven.google.com" }
 }
 
 dependencies {
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-maps')
+    //compile project(':react-native-vector-icons')
+    //compile project(':react-native-maps')
     compile project(':react-native-add-calendar-event')
     compile project(':react-native-fcm')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile 'com.google.firebase:firebase-messaging:9.4.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    compile 'com.google.android.gms:play-services-gcm:11.8.0'
+    compile 'com.google.android.gms:play-services-analytics:11.8.0'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
 }
 
 // Run this once to be able to run the application with BUCK
