--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -6,8 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "rnpm": {
-   "assets": ["./assets/fonts"]
- },
+    "assets": [
+      "./assets/fonts"
+    ]
+  },
   "dependencies": {
     "babel-plugin-transform-remove-console": "^6.8.5",
     "base-64": "0.1.0",
@@ -25,10 +27,8 @@
     "react-native-fcm": "10.0.3",
     "react-native-htmlview": "0.12.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
-    "react-native-maps": "^0.17.1",
     "react-native-material-ui": "^1.14.0",
     "react-native-unique-id": "1.0.4",
-    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "1.0.3",
     "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "5.0.6",
