--- a/Ludesco/.babelrc
+++ b/Ludesco/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets": ["react-native"],
-  "env": {
-      "production": {
-            "plugins": ["transform-remove-console"]
-       }
-  }
+  "presets": ["module:metro-react-native-babel-preset"]
 }
