--- a/Ludesco/package.json
+++ b/Ludesco/package.json
@@ -18,8 +18,8 @@
     "fuse.js": "^3.2.0",
     "moment": "^2.19.1",
     "moment-timezone": "0.5.14",
-    "react": "16.0.0",
-    "react-native": "0.50.4",
+    "react": "^16.6.3",
+    "react-native": "^0.57.8",
     "react-native-action-button": "2.8.1",
     "react-native-add-calendar-event": "git+https://github.com/DiksonSamuel/react-native-add-calendar-event.git",
     "react-native-calendars": "^1.9.2",
@@ -29,6 +29,7 @@
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-material-ui": "^1.14.0",
     "react-native-unique-id": "1.0.4",
+    "react-native-vector-icons": "^6.2.0",
     "react-navigation": "1.0.3",
     "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "5.0.6",
