--- a/ludesco/package.json
+++ b/ludesco/package.json
@@ -21,9 +21,9 @@
     "react-native-datepicker": "1.6.0",
     "react-native-drawer": "^2.5.1",
     "react-native-fcm": "10.0.3",
-    "react-native-htmlview": "0.12.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-material-ui": "^1.14.0",
+    "react-native-render-html": "^4.1.2",
     "react-native-unique-id": "1.0.4",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "3.3.2",
@@ -36,7 +36,13 @@
     "watchman": "^0.1.8"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-eslint": "^10.0.1",
+    "babel-preset-expo": "^5.0.0",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
   },
   "private": true
 }
