--- a/ludesco/package.json
+++ b/ludesco/package.json
@@ -8,17 +8,13 @@
   },
   "dependencies": {
     "base-64": "0.1.0",
-    "dateformat": "3.0.2",
     "expo": "^32.0.0",
     "fuse.js": "^3.2.0",
     "moment": "^2.19.1",
-    "moment-timezone": "0.5.14",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-action-button": "2.8.1",
     "react-native-add-calendar-event": "^2.3.0",
     "react-native-calendars": "^1.9.2",
-    "react-native-datepicker": "1.6.0",
     "react-native-drawer": "^2.5.1",
     "react-native-fcm": "10.0.3",
     "react-native-loading-spinner-overlay": "^1.0.1",
@@ -26,17 +22,14 @@
     "react-native-render-html": "^4.1.2",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "3.3.2",
-    "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "redux-watch": "1.1.1",
-    "reselect": "^3.0.1",
-    "watchman": "^0.1.8"
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "babel-preset-expo": "^5.0.0",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
